vignettes/irace-package.Rnw: sed -i 's/elitist-instances/elitist-new-instances/'
git-svn-id: file:///home/manu/work/irace/svn/trunk@1593 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -2061,7 +2061,7 @@ In addition, it may be useful to increase the number of instances executed
 before doing a statistical test in order to see more instance types before
 discarding configurations. The option \parameter{elitistNewInstances} in elitist
 \irace (option \parameter{elitist}) can be used to increase the number of new
-instances executed in each iteration, \eg \code{--elitist-instances 5} (default
+instances executed in each iteration, \eg \code{--elitist-new-instances 5} (default
 value is 1). For the non-elitist \irace, the option \parameter{firstTest} may be used for the same purpose, \eg \code{--first-test 10} (default value is 5).
 \MANUEL{And both at the same time?}
 
@@ -2285,7 +2285,7 @@ the \irace options that can be specified by the user.
   % are always executed unless the
   % \parameter{deterministic} option is active and all instances have already been used.
 
-  \defparameter{elitistNewInstances}{elitist-instances}{1} %
+  \defparameter{elitistNewInstances}{elitist-new-instances}{1} %
   Number of new instances added to each race before evaluating instances from
   previous races (only for elitist \irace).
   \begin{xwarningbox}
